langtools/test/tools/javac/TryWithResources/ImplicitFinal.out
ImplicitFinal.java:14:13: compiler.err.twr.resource.may.not.be.assigned: r
1 error
